<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>info.margreiter.getdown</groupId>
	<artifactId>webstart2getdown-maven-plugin-example1</artifactId>
	<version>1.7.1</version>

	<dependencies>
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>com.threerings</groupId>
			<artifactId>getdown</artifactId>
			<version>1.7.1</version>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.cbi.maven.plugins</groupId>
					<artifactId>eclipse-winsigner-plugin</artifactId>
					<version>1.1.5</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<finalName>webstart2getdown-maven-plugin-example</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.12.1</version>
			</plugin>

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<skipTests>${skipTests}</skipTests>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
					<argLine>-XX:MaxPermSize=2G -Xmx2G -Xms2G</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.17</version>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<encoding>ISO-8859-1</encoding>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<!-- CREATE WEBSTART Deployment -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>webstart-maven-plugin</artifactId>
				<version>1.0-beta-7</version>
				<executions>
					<execution>
						<!-- bind to phase, I prefer to call it manualls -->
						<phase>package</phase>
						<goals>
							<goal>jnlp-inline</goal> <!-- use jnlp, jnlp-inline or jnlp-single as appropriate -->
						</goals>
					</execution>
				</executions>
				<configuration>
					<!--outputDirectory></outputDirectory --> <!-- not required?? -->

					<!-- Set to true to exclude all transitive dependencies. Default is 
						false. -->
					<excludeTransitive>false</excludeTransitive>

					<!-- The path where the libraries are stored within the jnlp structure. 
						not required. by default the libraries are within the working directory -->
					<libPath>lib</libPath>
					<outputJarVersions>true</outputJarVersions>
					<!-- [optional] transitive dependencies filter - if omitted, all transitive 
						dependencies are included -->
					<dependencies>
						<!-- Note that only groupId and artifactId must be specified here. 
							because of a limitation of the Include/ExcludesArtifactFilter -->
						<!-- <includes> <include>commons-logging:commons-logging</include> 
							<include>commons-cli:commons-cli</include> </includes> -->
						<!-- <excludes> <exclude></exclude> <excludes> -->
					</dependencies>
					<!-- <resourcesDirectory>${project.basedir}/src/main/jnlp/resources</resourcesDirectory> -->
					<!-- default value -->

					<!-- JNLP generation -->
					<jnlp>
						<!-- default values -->
						<inputTemplateResourcePath>${project.basedir}/src/main/jnlp/my-templates</inputTemplateResourcePath>
						<inputTemplate>webstart2getdownExample1.vm</inputTemplate> <!-- relative to inputTemplateResourcePath -->
						<outputFile>webstart2getdownExample1.jnlp</outputFile> <!-- defaults to launch.jnlp -->
						<!-- used to automatically identify the jar containing the main class. -->
						<!-- this is perhaps going to change -->
						<mainClass>info.margreiter.getdown.maven.plugin.example.example1.MyApp</mainClass>
					</jnlp>
					<!-- SIGNING -->
					<!-- defining this will automatically sign the jar and its dependencies, 
						if necessary -->
					<sign>
						<keystore>${project.basedir}/src/main/keys/demokey.jks</keystore> <!-- path or URI (if empty, the default keystore ".keystore"-file in the 
							user-homedir is used) -->
						<!-- keypass>123456</keypass --><!-- we need to override passwords easily from the command line. ${keypass} -->
						<storepass>changeit</storepass> <!-- ${storepass} -->
						<alias>demokey</alias> <!-- alias of the key to use -->
						<tsaLocation>http://timestamp.digicert.com</tsaLocation>
						<verify>false</verify> <!-- verify the signature after signing -->
					</sign>
					<unsign>true</unsign> <!-- unsign already signed packages and sign them with own key -->
					<verifyjar>false</verifyjar>

					<!-- BUILDING PROCESS -->
					<pack200>
						<enabled>false</enabled>
					</pack200>
					<gzip>true</gzip> <!-- default force when pack200 false, true when pack200 selected ?? -->

					<!-- causes a version attribute to be output in each jar resource element, 
						optional, default is false -->
					<outputJarVersions>false</outputJarVersions>

					<!--install>false</install --> <!-- not yet supported -->
					<verbose>true</verbose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.goldin</groupId>
				<artifactId>copy-maven-plugin</artifactId>
				<version>0.2.5</version>
				<executions>
					<execution>
						<id>createModifiedJnlpFiles</id>
						<phase>package</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<resources>
								<resource>
									<targetPath>${project.basedir}/target/jnlp</targetPath>
									<file>${project.basedir}/target/jnlp/webstart2getdownExample1.jnlp</file>
									<destFileName>webstart2getdownExample1.jnlp</destFileName>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- webstart2getdown-maven-plugin -->
			<plugin>
				<groupId>info.margreiter.getdown</groupId>
				<artifactId>webstart2getdown-maven-plugin</artifactId>
				<version>1.7.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>getdowntxt</goal>
							<goal>digest</goal>
						</goals>
						<configuration>
							<jnlpfile>${project.build.directory}/jnlp/webstart2getdownExample1.jnlp</jnlpfile>
							<appbase>https://thomasx.github.io/webstart2getdown-maven-plugin-example1/getdown/</appbase>
							<appdir>${project.build.directory}/getdown/</appdir>
							<version></version>
							<allow_offline>false</allow_offline>

							<ui_background>FF0000</ui_background>
							<ui_background_image>img/w2gImage.png</ui_background_image>
							<ui_error_background></ui_error_background>
							<ui_icon>img/w2gicon_16_16.gif</ui_icon>
							<ui_progress>50,250,600,20</ui_progress>
							<ui_progress_bar>00FF05</ui_progress_bar>
							<ui_progress_text>000000</ui_progress_text>
							<ui_progress_image></ui_progress_image>
							<ui_status>60,220,580,20</ui_status>
							<ui_status_text>000000</ui_status_text>
							<ui_text_shadow></ui_text_shadow>
							<ui_hide_decorations>false</ui_hide_decorations>
							<ui_min_show_seconds>10</ui_min_show_seconds>
							<ui_install_error>https://github.com/thomasX/webstart2getdown-maven-plugin</ui_install_error>
							<ui_mac_dock_icon>img/w2gicon_16_16.gif</ui_mac_dock_icon>

							<jvmargs>
								<jvmarg></jvmarg>
							</jvmargs>

							<appargs>
								<apparg></apparg>
							</appargs>

							<!-- we need to override passwords easily from the command line. ${keypass} -->
							<!-- path or URI (if empty, the default keystore ".keystore"-file 
								in the user-homedir is used) -->
							<keystore>${project.basedir}/src/main/keys/demokey.jks</keystore>
							<!-- ${storepass} -->
							<storepass>changeit</storepass>
							<!-- alias of the key to use -->
							<!-- <keypass>123456</keypass> -->
							<alias>demokey</alias>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- create the WindowsInstaller -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>nsis-maven-plugin</artifactId>
				<version>1.0-alpha-1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>generate-headerfile</goal>
							<goal>make</goal>
						</goals>
						<configuration>
							<makensisBin>makensis.exe</makensisBin>
							<headerFile>${project.build.directory}/windows/nsis/project.nsh</headerFile>
							<outputFile>windows/SetupExample1.exe</outputFile>
							<scriptFile>src/main/installer/windows/nsis/example1.nsi</scriptFile>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.cbi.maven.plugins</groupId>
				<artifactId>eclipse-winsigner-plugin</artifactId>
				<version>1.1.5</version>
			</plugin>
			<!-- create a Deb for Debian and based systems such as Ubuntu, Mint -->
			<plugin>
				<artifactId>jdeb</artifactId>
				<groupId>org.vafer</groupId>
				<version>1.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jdeb</goal>
						</goals>
						<configuration>
						</configuration>
					</execution>
				</executions>
				<dependencies>
				</dependencies>
				<configuration>
					<controlDir>src/main/installer/debian/control</controlDir>
					<skipPOMs>false</skipPOMs>
					<installDir>/usr/lib/example1</installDir>
					<deb>${project.basedir}/target/example1.deb</deb>
					<dataSet>
						<data>
							<type>directory</type>
							<src>target/getdown</src>
							<includes>*.*</includes>
							<mapper>
								<type>perm</type>
								<strip>1</strip>
								<prefix>/usr/lib/example1</prefix>
								<user>root</user>
								<group>root</group>
								<filemode>755</filemode>
							</mapper>
						</data>
						<data>
							<type>directory</type>
							<src>${basedir}/src/main/installer/debian/scripts</src>
							<includes>*</includes>
							<mapper>
								<type>perm</type>
								<strip>1</strip>
								<prefix>/usr/bin</prefix>
								<user>root</user>
								<group>root</group>
								<filemode>755</filemode>
							</mapper>
						</data>
						<data>
							<type>directory</type>
							<src>${project.build.directory}/jnlp/img</src>
							<includes>w2gImage_256_256.png</includes>
							<mapper>
								<type>perm</type>
								<strip>1</strip>
								<prefix>/usr/share/pixmaps</prefix>
								<user>root</user>
								<group>root</group>
								<filemode>755</filemode>
							</mapper>
						</data>
						<data>
							<type>directory</type>
							<src>${basedir}/src/main/installer/debian/applications</src>
							<includes>*</includes>
							<mapper>
								<type>perm</type>
								<strip>1</strip>
								<prefix>/usr/share/applications</prefix>
								<user>root</user>
								<group>root</group>
								<filemode>755</filemode>
							</mapper>
						</data>
					</dataSet>
				</configuration>
			</plugin>
			<!-- create the OSX installer -->
			<plugin>
				<groupId>com.agiliumlabs.osxappbundle</groupId>
				<artifactId>osxappbundle-maven-plugin</artifactId>
				<version>1.0.1</version>
				<configuration>
					<buildDirectory>target/osx/example1</buildDirectory>
					<bundleName>example1</bundleName>
					<zipFile>${basedir}/target/osx/example1-app.zip</zipFile>
					<excludeArtifacts>true</excludeArtifacts>
					<javaApplicationStub>${basedir}/src/main/installer/osx/osx-stub</javaApplicationStub>
					<mainClass>info.margreiter.getdown.maven.plugin.example.example1.MyApp</mainClass>
					<additionalClasspath>
						<path>getdown.jar</path>
					</additionalClasspath>
					<additionalResources>
						<fileSet>
							<directory>${basedir}/target/getdown</directory>
							<includes>
								<include>**/*</include>
							</includes>
						</fileSet>
					</additionalResources>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>bundle</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<pluginRepositories>
		<pluginRepository>
			<id>getdown-maven-github-repo</id>
			<url>https://thomasx.github.io/webstart2getdown-maven-plugin/</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
</project>
